--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </div>
 
     </div>
-    <script type="text/javascript" src="main.js">
+    <script type="text/javascript" src="main.js" async>
 
     </script>
   </body>
