again modified used for giving data java script files

--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
   <body>
     <div class="parent">
       <div class="child1">
-<img src="1.jpg" alt="Sri">
+<!-- <img src="1.jpg" alt="Sri">
 <h3>Name:-Electronics</h3>
 <a href="mailto:mail2srinadh143@gmail.com">mail2srinadh143@gmail.com</a>
 <h3>ph.no:-012345656</h3>
 <h2>Address</h2>
 <hr>
-<p>SRKR ENGINEERING COLLEGE</p>
+<p>SRKR ENGINEERING COLLEGE</p> -->
       </div>
       <div class="child2">
-        <h2>Carrier Objective:</h2>
-        <hr>
+        <!-- <h2>Carrier Objective:</h2>
+        <hr> -->
       </div>
 
     </div>
