--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="parent">
-      <div class="child1">
+      <div class="child1" onclick="openpage()">
 <!-- <img src="1.jpg" alt="Sri">
 <h3>Name:-Electronics</h3>
 <a href="mailto:mail2srinadh143@gmail.com">mail2srinadh143@gmail.com</a>
